Version Next

    - Flush dirty writes in parallel when possible (#249)
    - Add "--ipTOS" flag (#251)

Version 2.1.6 released August 22, 2025

    - Fix realloc() crash with newer libfuse when "--filename" is used.

Version 2.1.5 released May 22, 2025

    - Add new flag "--statsFileMirror" (issue #237)
    - Update to FUSE 3.x (#239)

Version 2.1.4 released May 10, 2025

    - Add new flag "--sharedDiskMode" (issue #236)
    - Fix use of deprecated cURL constant (pr #228)
    - Conditionalize nbdkit "block_size" callback (issue #226)
    - Skip nbd-client(8) cleanup step if it failed to start properly (#227).
    - Add new flag "--accessEC2IAM-IMDSv2" (issue #228)

Version 2.1.3 released June 12, 2024

    - Implement nbdkit "block_size" callback
    - Added configure flag "--enable-nbd" (issue #223)
    - Fix spurious "cache file is truncated" error (issue #222)
    - Fix bugs in dcache.c when USE_FALLOCATE enabled (issue #224)

Version 2.1.2 released April 23, 2024

    - Automatically recreate nbdkit socket's directory if missing (issue #219)
    - Recalculate date and authorization on retry (issue #214)

Version 2.1.1 released October 23, 2023

    - Fixed bug with bulk delete HTTP requests (issue #211)
    - Fixed empty payload bug when retrying an upload (issue #212)
    - Check for errors returned by curl_easy_setopt()
    - Added --noCurlCache flag to facilitate debugging
    - Bump wait time for nbdkit to start from 1s to 5s

Version 2.1.0 released September 23, 2023

    - Avoid sending an empty Accept-Encoding header (issue #208)
    - Use fallocate(FALLOC_FL_PUNCH_HOLE) for empty disk cache blocks (issue #200)
    - Made sync(1) work on s3backer file to flush cached data (issue #197)
    - Fixed bug where s3b_compress=deflate NDB flag would fail (issue #195)
    - Fixed bug in zero cache "current_cache_size" stats value (issue #204)
    - Reuse cURL handles after normal HTTP error codes (issue #199)